# asebytes

./: .gitignore  Design.md  README.md  TODO.md  async-api.py  docker-compose.yml  index.html  pyproject.toml
.benchmarks/Darwin-CPython-3.11-64bit/: 0001_baseline.json  0002_perf_analysis.json
.github/workflows/: benchmark.yml  publish.yaml  tests.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/resolved/: bench-summary-no-diffs.md
.planning/milestones/: v0.3.1-REQUIREMENTS.md  v0.3.1-ROADMAP.md  v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-backend-architecture/: 01-02-SUMMARY.md  01-CONTEXT.md
.planning/phases/02-h5md-compliance/: 02-03-SUMMARY.md
.planning/phases/03-contract-test-suite/: 03-VALIDATION.md
.planning/phases/05-benchmark-pipeline/: 05-01-PLAN.md  05-01-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-pr-feedback/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-CONTEXT.md  06-RESEARCH.md  06-UAT.md  06-VALIDATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
dev/bench/: data.js
docs/: README.md  performance.ipynb  performance_putmulti.ipynb  time_per_molecule.csv  visualize_benchmarks.py
docs/plans/: 2025-11-06-bytesio-metadata-optimization.md  2026-02-18-ase-io-backend-design.md  2026-02-18-backend-abstraction-views.md  2026-02-18-code-review-fixes-design.md  2026-02-19-benchmark-redesign.md  2026-02-19-cache-to-design.md  2026-02-19-h5md-backend-design.md  2026-02-19-hf-backend.md  2026-02-19-optional-lmdb-design.md  2026-02-27-async-api-design.md  2026-02-27-facade-api-parity-design.md  2026-02-27-generic-key-type-views-design.md  2026-02-27-generic-key-type-views-impl.md  2026-02-27-reserve-none-fix-impl.md  2026-02-27-reserve-none-tests-design.md  2026-02-27-reserve-none-tests-impl.md  2026-02-28-benchmark-redesign-design.md  2026-02-28-bulk-write-design.md  2026-02-28-bulk-write-impl.md  2026-02-28-redis-backend-design.md  2026-02-28-redis-backend-impl.md  2026-02-28-review-issue-fixes-design.md  2026-02-28-review-issue-fixes-impl.md  2026-02-28-universal-backend-adapters-design.md  2026-02-28-universal-backend-adapters-impl.md  2026-02-28-upstream-changes-design.md  2026-02-28-upstream-changes-impl.md  2026-03-01-performance-and-api-improvements-design.md  2026-03-01-performance-api-implementation-plan.md  2026-03-05-lazy-concat-design.md  2026-03-05-lazy-concat-impl.md
docs/specs/: h5md.md  lmdb.md  memory.md  mongodb.md  redis.md  zarr.md
scripts/: download_benchmark_data.py
src/asebytes/: __init__.py  _adapters.py  _async_adapters.py  _async_backends.py  _async_blob_io.py  _async_bytesio.py  _async_io.py  _async_object_io.py  _async_protocols.py  _async_views.py  _backends.py  _blob_io.py  _bytesio.py  _columnar.py  _concat.py  _convert.py  _json.py  _object_io.py  _protocols.py  _registry.py  _schema.py  _views.py  decode.py  encode.py  from_bytes.py  io.py  metadata.py  to_bytes.py
tests/: README.md  conftest.py  conftest_hf.py  test_adapters.py  test_ase_backend.py  test_ase_column_views.py  test_aseio.py  test_aseio_update.py  test_aseio_views.py  test_async_adapters.py  test_async_aseio.py  test_async_aseio_atoms.py  test_async_blob_io.py  test_async_bytesio.py  test_async_column_dimensionality.py  test_async_facade_update.py  test_async_object_io.py  test_async_protocols.py  test_async_uri_registry.py  test_async_views.py  test_benchmark_backend.py  test_benchmark_column_access.py  test_benchmark_file_size.py  test_benchmark_random_access.py  test_benchmark_read.py  test_benchmark_write.py  test_blob_column_access.py  test_blob_native_bytes.py  test_blob_negative_index.py  test_bulk_write_abc.py  test_bulk_write_async_abc.py  test_bulk_write_async_views.py  test_bulk_write_views.py  test_bytesio.py  test_bytesio_update.py  test_cache_to.py  test_column_dimensionality.py  test_column_int_index.py  test_column_writes.py  test_columnar_backend.py  (+62 more)
tests/benchmarks/: conftest.py  test_bench_property_access.py  test_bench_random_access.py  test_bench_read.py  test_bench_update.py  test_bench_write.py
tests/contract/: conftest.py  test_ase_contract.py  test_async_ase_contract.py  test_async_blob_contract.py  test_async_object_contract.py  test_blob_contract.py  test_h5md_compliance.py  test_object_contract.py  test_readonly_contract.py  test_znh5md_roundtrip.py
(+84 files in other folders)
