[project]
name = "asebytes"
version = "0.2.1"
description = "Fast binary serialization and storage for ASE Atoms."
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.26.0",
    "msgpack>=1.1.2",
    "msgpack-numpy>=0.4.8",
    "typing_extensions>=4.5.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "asebytes[lmdb]",
    "asebytes[hf]",
    "ase-db-backends>=0.10.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "molify>=0.0.1a0",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.2.1",
    "znh5md>=0.4.8",
    "asebytes[zarr]",
    "h5py>=3.15.1",
]

[project.urls]
Repository = "https://github.com/zincware/asebytes"
Releases = "https://github.com/zincware/asebytes/releases"
Discord = "https://discord.gg/7ncfwhsnm4"

[project.optional-dependencies]
lmdb = [
    "lmdb>=1.7.5",
]
hf = [
    "datasets>=4.5.0",
]
h5md = [
    "h5py>=3.8.0",
]
zarr = [
    "zarr>=3.0",
]
mongodb = [
    "pymongo>=4.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "-m", "not benchmark"]

markers = [
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
]
