[project]
name = "asebytes"
version = "0.3.0"
description = "Fast binary serialization and storage for ASE Atoms."
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.26.0",
    "msgpack>=1.1.2",
    "msgpack-numpy>=0.4.8",
    "typing_extensions>=4.5.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "asebytes[lmdb]",
    "asebytes[hf]",
    "ase-db-backends>=0.10.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "molify>=0.0.1a0",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.2.1",
    "znh5md>=0.4.8",
    "asebytes[zarr]",
    "asebytes[h5]",
    "asebytes[mongodb]",
    "asebytes[redis]",
    "anyio>=4.0",
]

[project.urls]
Repository = "https://github.com/zincware/asebytes"
Releases = "https://github.com/zincware/asebytes/releases"
Discord = "https://discord.gg/7ncfwhsnm4"

[project.optional-dependencies]
lmdb = [
    "lmdb>=1.6.0",
]
hf = [
    "datasets>=4.5.0",
]
h5 = [
    "h5py>=3.12.0",
]
zarr = [
    "zarr>=3.0",
]
mongodb = [
    "pymongo>=4.13",
]
redis = [
    "redis>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "-m", "not benchmark"]

markers = [
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
    "mongodb: marks tests requiring MongoDB",
    "redis: marks tests requiring Redis",
    "hf: marks tests requiring HuggingFace network access",
    "supports_variable_particles: backend supports variable particle counts",
    "supports_per_atom_arrays: backend supports per-atom custom arrays",
    "supports_constraints: backend supports constraint round-trip",
    "supports_nested_info: backend supports nested dict info values",
]
